# src

./: .gitignore  README.md  pyproject.toml  setup.py
format/: format.md
report/: __init__.py  report.py
report/common/: __init__.py  report_appendix_common.py  report_common.py  report_graph_common.py  report_image_common.py  report_item_common.py  report_list_common.py  report_table_common.py  report_text_common.py  report_title_common.py
report/g2_105/: report_appendix_g2_105.py  report_g2_105.py
report/g7_32/: report_appendix_g7_32.py  report_conclusion_g7_32.py  report_g7_32.py  report_introduction_g7_32.py  report_referat_g7_32.py  report_sources_g7_32.py  report_symbols_g7_32.py  report_terms_g7_32.py
report/utils/: greek.py  report_format.py
report/utils/hashmaker/: __init__.py  hashmaker.py
report/utils/localtools/: __init__.py  localtools.py
report/utils/nettools/: Zipper.py  __init__.py  nettools.py
test/: ShortList.md  simple_report.py  simple_report_g2_105.py  simple_report_g7_32.py  sources.md  terms.md  test.md
