[tool.poetry]
name = "src"
version = "0.0.1"
description = ""
authors = ["serbeh <serbeh@gmail.com>"]

packages = [
    { include = "report" },
]

[tool.poetry.dependencies]
python = "^3.8"
#pandas = { version = "^1.2.4", optional = true }
#PyPDF2 = { version = "*", optional = true }
#tqdm = { version = "*", optional = true }
#requests = { version = "^2.24.0", optional = true }
#setuptools-git-version = { version = "^1.0.3", optional = true }
#dash = { version = "^2.0.0", optional = true }
#loguru = { version = "^0.5.3", optional = true }
#pydantic = { version = "^1.8.2", optional = true }

[tool.poetry.dev-dependencies]
pandas = "^1.4.1"
tqdm = "^4.63.0"
requests = "^2.27.1"
dash = "^2.2.0"
loguru = "^0.6.0"
pydantic = "^1.9.0"
PyPDF2 = "^1.26.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
